src/test/ui/terr-sorts.stderr
error[E0308]: mismatched types
  --> $DIR/terr-sorts.rs:10:14
   |
LL |     want_foo(b);
   |              ^ expected struct `Foo`, found struct `std::boxed::Box`
   |
   = note: expected type `Foo`
              found type `std::boxed::Box<Foo>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
